<resources>
    <string name="app_name">BloodBank</string>
    <string name="addBlood">Add Blood</string>
    <string name="adminLogin">Admin Login</string>
    <string name="donateBlood">Donate Blood</string>
    <string name="getBlood">Get Blood</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="passwordKey" translatable="false">1826</string>
    <string name="thankYou">Thanks for the donation :)</string>
    <string name="updated">Blood Group Entry Updated</string>
    <string name="updateBlood">Update Entry</string>

    <!-- ImageDescriptions-->
    <string name="imageBloodStatus">BloodStatus</string>
    <!-- -->

    <!-- Admin-->
    <string name="adminDialogTitle">Alert!</string>
    <string name="adminDialogMessage">Are you sure you want to make this entry verified</string>
    <string name="adminDialogMessageUndo">Are you sure you want to invalidate this entry</string>
    <string name="yes">Yes</string>
    <!-- -->

    <!-- User-->
    <string name="userDialogMessage">Do you want to purchase this blood ?</string>
    <!-- -->

    <!-- BloodGroupFields-->
    <string name="bloodUserName">Name</string>
    <array name="bloodGroups">
        <item>AB+</item>
        <item>AB-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </array>
    <string name="bloodUserContact">Phone No</string>
    <string name="bloodHospitalName">Hospital Name</string>
    <!-- -->

    <!-- ErrorMessages-->
    <string name="errorNoUserName">I think you forgot the user name!</string>
    <string name="errorNoContactNo">We need your contact info</string>
    <string name="errorNoHospitalName">We can donate your blood anonymously</string>
    <string name="errorIncorrectPassword">Incorrect Password</string>
    <!-- -->

    <!-- menuStrings-->
    <string name="menuSearch">Search</string>
    <string name="menuEdit">Edit</string>
    <string name="menuDelete">Delete</string>
    <!-- -->

    <!-- dialogStrings-->
    <string name="dialogDeleteTitle">Warning !</string>
    <string name="dialogDeleteMessage">Are you sure you want to delete this entry</string>
    <!-- -->

    <!-- bundleStrings-->
    <string name="bundleBloodGroupParcel">bundleBloodGroupParcel</string>
    <string name="bundleViewModelType">bundleViewModelType</string>
    <!-- -->
</resources>
