<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/stretchedHorizontally"
    tools:context="com.nrs.rsrey.bloodbank.views.fragments.StartFragment">

    <Button
        android:id="@+id/startAdminLogin"
        style="@style/stretchedHorizontally"
        android:text="@string/adminLogin" />

    <Button
        android:id="@+id/startGetBlood"
        style="@style/stretchedHorizontally"
        android:text="@string/getBlood"
        app:layout_constraintTop_toBottomOf="@id/startAdminLogin" />

    <Button
        android:id="@+id/startDonateBlood"
        style="@style/stretchedHorizontally"
        android:text="@string/donateBlood"
        app:layout_constraintTop_toBottomOf="@id/startGetBlood" />

</android.support.constraint.ConstraintLayout>
